deployment.yaml
# This is an example of a deployment - a declaration of pods.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "georgia-deployment"
  namespace: "fma"
  labels:
    app: "georgia"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "georgia"
  template:
    metadata:
      labels:
        app: "georgia"
    spec:
      containers:
        - image: "docker.myob.com/jupiter-workshop/georgia-app:georgia"
          name: georgia
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 8
            periodSeconds: 10
